--- a/src/components/Index/Title/Subtitle/Subtitle.module.scss
+++ b/src/components/Index/Title/Subtitle/Subtitle.module.scss
@@ -2,12 +2,15 @@
 
 .Subtitle {
   @include flex(column);
-  @include font("S");
 
   letter-spacing: 0.4rem;
   margin-top: 3rem;
   position: relative;
   width: 170px;
+
+  h2 {
+    @include font("S");
+  }
 
   //Push to end of div
   h2:nth-child(3),
@@ -27,13 +30,31 @@
 
   h2:nth-child(1) {
     &::after {
-      margin-left: 2rem;
+      margin-left: 1rem;
     }
   }
 
   h2:nth-child(3) {
     &::before {
-      margin-left: -2rem;
+      margin-left: -1rem;
+    }
+  }
+
+  @include min-width(768px) {
+    h2 {
+      @include font("M");
+    }
+
+    h2:nth-child(1) {
+      &::after {
+        margin-left: 2rem;
+      }
+    }
+
+    h2:nth-child(3) {
+      &::before {
+        margin-left: -2rem;
+      }
     }
   }
 }
